--- a/readme.org
+++ b/readme.org
@@ -2,6 +2,59 @@
 
 Collection of miscellaneous helper algorithms and types.
 
+* Toplevel
+
+** ~hmisc/hexceptions~
+
+One of *THE* features of this library - effortlessly generate
+annotations for source code. Show exact line in the source code and
+provide custom annotations.
+
+#+begin_src nim :exports both
+  {.define(plainStdout).} # Output is colored by default, disable for
+                          # readme example
+  import hmisc/hexceptions
+
+  macro test(a: untyped): untyped =
+    raise toCodeError({
+      a[2] : "Third element in array",
+      a[0] : "Array starts here\nMultiline annotations",
+      a[5] : "Annotation for part on the different line"
+    }, "Annotation for array error")
+
+  test([1,2,3,4,
+        5,6])
+
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Annotation for array error
+
+ 11
+ 14:10 test([1,2,3,4,
+             ^   ^
+             |   |
+             |   Third element in array
+             |
+             Array starts here
+             Multiline annotations
+
+ 12   test([1,2,3,4,
+ 15:8       5,6])
+              ^
+              |
+              Annotation for part on the different line
+
+
+
+Raised in :0
+
+
+ [CodeError:ObjectType]
+#+end_example
+
+
 * Macros
 
 * Algorithms
