--- a/readme.org
+++ b/readme.org
@@ -57,7 +57,96 @@ Raised in :0
 
 * Macros
 
+** ~hmisc/macros/obj_field_macros~ [[https://haxscramper.github.io/hmisc-doc/src/hmisc/macros/obj_field_macros.html][documentation]]
+
+- ~parallelFieldPairs~ - iterate case object fields in parallel
+- ~getFields~ - construct sequence of [[https://haxscramper.github.io/hmisc-doc/src/hmisc/types/hnim_ast.html#Field][Field]] types from node.
+
+** ~hmisc/macros/iflet~
+
+Rust-like iflet. get value from ~Option[T]~ only if it contains
+something, otherwise execute ~else~.
+
+#+begin_src nim :exports both
+import options
+import hmisc/macros/iflet
+
+iflet (val = some(12)):
+  echo typeof val
+
+iflet (val = none(int)):
+  echo "???"
+else:
+  echo "no value"
+#+end_src
+
+#+RESULTS:
+: int
+: no value
+
 * Algorithms
+  :PROPERTIES:
+  :header-args:nim:+ :import hmisc/algo/halgorithm
+  :END:
+
+** ~hmisc/algo/halgorithm~ [[https://haxscramper.github.io/hmisc-doc/src/hmisc/algo/halgorithm.html][documentation]]
+
+- predicates
+  - ~allOfIt~
+  - ~anyOfIt~
+  - ~noneOfIt~
+  - ~==~ for Option-Val comparison
+- working with sequences
+  - ~maxIt~
+  - ~disjointIter~
+  - ~last~
+- working with strings
+  - ~joinw~, ~joinq~, ~joinl~, ~joinkv~ - join on whitespaces,
+    whitespace + quote each string, newlines or key-value pairs.
+  - ~wrap~ - wrap strings in delimiters. Has convinience overload for
+    ~.wrap("()")~ that automatically determines starting/ending
+    wrapper strings.
+  - Multiple overloads for ~join~ and ~startsWith~
+  - ~enclosedIn~ - check if string is wrapped in delimiters
+  - ~dedent~ - derease indentation for multiline string
+- other
+  - ~ifSomeIt~ - same as ~opt.isSome() and (let it = opt.get();
+    predicate)~
+  - ~testEq~ - compare two objects. If they are different print first
+    mismatching line in their string representation.
+  - ~assertEq~ - compare objects using ~testEq~, raise on failed
+    comparison.
+
+#+begin_src nim :exports both
+import hmisc/algo/halgorithm
+
+block:
+  echo "-- withIt --"
+  let immutable = (a: 12, b: 12)
+  echo immutable.withIt do:
+    it.a = 909
+
+block:
+  echo "-- withResIt --"
+  let immutable = (a: 12, b: "eee")
+  echo immutable.withResIt do:
+    it.a += 999
+    $it.a & it.b
+
+block:
+  echo "-- join* --"
+  echo {1 : "22", 3: "333"}.joinkv().join()
+#+end_src
+
+#+RESULTS:
+: -- withIt --
+: (a: 909, b: 12)
+: -- withResIt --
+: 1011eee
+: -- join* --
+: 0 = (1, "22") 1 = (3, "333")
+
+
 
 ** ~hmisc/algo/hseq_mapping~
 
@@ -150,3 +239,14 @@ modifiers).
 
 Provides two types for colored text - ~ColoredString~ (string +
 styling) and ~ColoredRune~ (unicode rune + styling).
+
+
+* Contribution & development
+
+Most of the features in this library were implemented on
+/do-it-when-I-need-it/ basis. Some of them are tested quite
+extensively (sequence and tree mappings, colored strings), but more
+unit test are always welcome. If you consider contributing and have
+any questions about implementation or just want to clarify some things
+(documentation is not really good right now) feel free to join my
+[[https://discord.gg/ZnBB4E][discord server]] and ask questions there.
