[FIX|DOC] Use non-expiring discord server link

--- a/readme.org
+++ b/readme.org
@@ -248,5 +248,6 @@ Most of the features in this library were implemented on
 extensively (sequence and tree mappings, colored strings), but more
 unit test are always welcome. If you consider contributing and have
 any questions about implementation or just want to clarify some things
-(documentation might need more attention) feel free to join my [[https://discord.gg/ZnBB4E][discord
-server]] and ask questions there.
+(documentation might need more attention) feel free to join my
+[[https://discord.gg/hjfYJCU][discord server]] and ask questions
+there.
