[FEATURE] Parse enum definition
Added:
  - FEATURE `Enum` type - easier-to-use representation of enum
    declaration.
  - `parseEnumImpl` - parse enum declaration into `Enum`
  - `enumNamees` - get list of enum field names
Changed:
  - REFACTOR `enumPref` - use helper functions for getting enum body

--- a/readme.org
+++ b/readme.org
@@ -113,7 +113,7 @@ else:
     wrapper strings.
   - Multiple overloads for ~join~ and ~startsWith~
   - ~enclosedIn~ - check if string is wrapped in delimiters
-  - ~dedent~ - derease indentation for multiline string
+  - ~dedent~ - decease indentation for multiline string
   - ~camelSplit~ - split string as camel case identifier
   - ~abbrevCamel~ - /camelCase/ abbreviation search.
 - other
@@ -156,6 +156,7 @@ block:
 : 1011eee
 : -- join* --
 : 0 = (1, "22") 1 = (3, "333")
+: -- abbrevCamel --
 : @["ABA"]
 
 
@@ -260,5 +261,5 @@ Most of the features in this library were implemented on
 extensively (sequence and tree mappings, colored strings), but more
 unit test are always welcome. If you consider contributing and have
 any questions about implementation or just want to clarify some things
-(documentation might need more attention) feel free to join my [[https://discord.gg/ZnBB4E][discord
+(documentation might need more attention) feel free to join my [[https://discord.gg/hjfYJCU][discord
 server]] and ask questions there.
