--- a/readme.org
+++ b/readme.org
@@ -180,6 +180,32 @@ block:
 
 * Types
 
+** ~hmisc/types/hnim_ast~
+
+Statically typed wrapper for nim ast. Another take on solving problem
+of ~node[0][0][1][0]~. Right now mostly covers types - parsing of
+implementation, generation and analysis.
+
+- working with enums
+  - ~parseEnumImpl~ - parse as enum implementation. Tested on alias,
+    symbol, value, enum-as-generic-parameter, ~typedesc[Enum]~ etc.
+  - ~getEnumPref~ - for [[https://nim-lang.org/docs/nep1.html#introduction-naming-conventions][NEP-conforming]] enums (~prefixEnumValueName~)
+    get ~prefix~
+  - ~getEnumNames~ - get list of all enum names
+  - ~enumNames~ - macro. Generate ~seq[string]~ of names for all
+    enums.
+- working with object declarations
+  - ~ObjectBranch~, ~Object~ and ~ObjectField~ types - wrappers on top
+    of nim object declarations. Supports arbitrarily named case
+    fields, annotations for objects etc. Currently does not cover all
+    possible cases.
+  - ~eachField~ - visit each field in object
+  - can be conveted to and from ~NimNode~
+- working with object values
+  - ~ObjTree~ - 'stringly typed' representation of object value.
+    mainly used in ~hpprint~, but due to dependency reasons type
+    definitions is still here.
+
 ** ~hmisc/types/hprimitives~
 
 - ~StrBlock~ :: ~seq[string]~ + getting height/width
