--- a/readme.org
+++ b/readme.org
@@ -217,6 +217,10 @@ implementation, generation and analysis.
     possible and use insert result of callback for each field. For use
     case example see [[file:tests/tHnimAst.nim]]
   - can be conveted to and from ~NimNode~
+  - ~eachCase~ - generate case statement for object's kind fields
+  - ~eachParallelCase~ - generate case statement for two object's kind
+    fields.
+  - ~eachPath~
 - working with object values
   - ~ObjTree~ - 'stringly typed' representation of object value.
     mainly used in ~hpprint~, but due to dependency reasons type
