[FEATURE] `startsWith` and `isImmutable`
Added:
  - `startsWith(string, seq[string])` - check if string starts with
    any of the prefixes
  - `isImmutable` - consteval check do do `when isImmutable(<ident>)`

--- a/readme.org
+++ b/readme.org
@@ -211,8 +211,8 @@ todo:
 
 *** ~Seq2D~
 
-Always-rectangular 2d sequence of items. Public API prevents
-modification that will make it non-rectangular.
+Always-rectangular 2d sequence of items. API prevents modification
+that will make it non-rectangular.
 
 Helper functions are provided for
 
