--- a/readme.org
+++ b/readme.org
@@ -42,7 +42,7 @@ on:
 jobs:
   build:
     if: |
-      !contains(github.event.head_commit.message, '>>>')
+      !contains(github.event.head_commit.message, 'SKIP')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
